--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -166,7 +166,7 @@
       var(--gradient-color),
       var(--gradient-color)
     ),
-    url(https://d-bednarczyk.github.io/goit-markup-hw-04/images/background.jpg);
+    url(https://BartekMTB.github.io/goit-markup-hw-07/images/background.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
